2010-07-02  Zoltan Herczeg  <zherczeg@webkit.org>

Reviewed by Oliver Hunt.

        Minor fix: Diffuse constant is float (not integer)
        https://bugs.webkit.org/show_bug.cgi?id=10412

        * svg/SVGFEDiffuseLightingElement.cpp:
        (WebCore::SVGFEDiffuseLightingElement::parseMappedAttribute):

Canonical link: https://commits.webkit.org/53338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@62423 268f45cc-cd09-0410-ab3c-d52691b4dbfc